# QUAIL_Software

./: README.md  dlapi_7.rar
QUAIL_Soft/Birger/: Makefile  birger  birger_main.c  notes.txt  robofocus
QUAIL_Soft/Birger/test/: Makefile  birger_main.c  brg
QUAIL_Soft/QUAIL_GUI/: Calculated_Values.py  Camera_Thread.py  QUAIL_Mainframe.py
QUAIL_Soft/QUAIL_GUI/black/: black.tcl
QUAIL_Soft/SBIG_Drivers/include/: dlapi.h  map.h
QUAIL_Soft/SBIG_Drivers/lib/: libdlapi.1.3.5-0.dylib
QUAIL_Soft/SBIG_Drivers/sample/: CMakeCache.txt  CMakeLists.txt  Makefile  SBIGDriver  cmake_install.cmake  main.cpp
